--- a/Ch. 4 Trees and Graphs/Interview Problems.ipynb
+++ b/Ch. 4 Trees and Graphs/Interview Problems.ipynb
@@ -980,7 +980,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4.8 "
+    "# 4.7 Build Order:\n",
+    "You are given a list of projects and a list of dependencies (which is a list of pairs of projects, where the second project is dependent on the first project). All of a project'sdependencies must be built before the project is. Find a build order that will allow the projects to be built. If there is no valid build order, return an error.\n",
+    "#### EXAMPLE\n",
+    "- Input: projects: a, b, c, d, e, f\n",
+    "\n",
+    "dependencies: (a, d), (f, b), (b, d), (f, a), (d, c) \n",
+    "\n",
+    "- Output: f, e, a, b, d, c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def DecimalToBinary(result, num): \n",
+    "      \n",
+    "    if num > 1: \n",
+    "        DecimalToBinary(result,num // 2) \n",
+    "    print(num % 2)\n",
+    "#     print(result)\n",
+    "    result = (num % 2)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DecimalToBinary(0,7)"
    ]
   },
   {
