--- a/Ch. 8 Recursion and Dynamic Programming /Problems.ipynb
+++ b/Ch. 8 Recursion and Dynamic Programming /Problems.ipynb
@@ -174,6 +174,231 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def robot_maze(maze,i,j):\n",
+    "    \n",
+    "    #check out of bounds\n",
+    "    if maze[i][j] == 'x' or j < 0 or i < 0:\n",
+    "        return False\n",
+    "    \n",
+    "\n",
+    "    #if reach end then set to true\n",
+    "    end_reached = i == 0 and j == 0\n",
+    "    \n",
+    "    if end_reached or robot_maze(maze,i-1,j) or robot_maze(maze,i,j-1): \n",
+    "        print(\"i = \",i)\n",
+    "        print(\"j = \",j)\n",
+    "        print()\n",
+    "        return True\n",
+    "    \n",
+    "    return False\n",
+    "       \n",
+    "    \n",
+    "   \n",
+    "   \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['S', 'x', 0, 0], [0, 'x', 0, 0], [0, 'x', 0, 0], [0, 0, 0, 0]]\n",
+      "i =  0\n",
+      "j =  0\n",
+      "\n",
+      "i =  1\n",
+      "j =  0\n",
+      "\n",
+      "i =  2\n",
+      "j =  0\n",
+      "\n",
+      "i =  3\n",
+      "j =  0\n",
+      "\n",
+      "i =  3\n",
+      "j =  1\n",
+      "\n",
+      "i =  3\n",
+      "j =  2\n",
+      "\n",
+      "i =  3\n",
+      "j =  3\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 286,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "length = 4\n",
+    "maze = [[0 for x in range(length)] for y in range(length)] \n",
+    "\n",
+    "# maze[0][0] = 'S'\n",
+    "# maze[0][1] = 'x'\n",
+    "# maze[1][1] = 'x'\n",
+    "# maze[2][1] = 'x'\n",
+    "# maze[3][1] = 'x'\n",
+    "# maze[0][3] = 'x'\n",
+    "# maze[0][3] = 'x'\n",
+    "\n",
+    "maze[0][0] = 'S'\n",
+    "maze[0][1] = 'x'\n",
+    "maze[1][1] = 'x'\n",
+    "maze[2][1] = 'x'\n",
+    "# maze[3][1] = 'x'\n",
+    "\n",
+    "\n",
+    "print(maze)\n",
+    "\n",
+    "robot_maze(maze,3,3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dynamic Programming Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def robot_maze_optimized(maze,i,j,failed_points,total):\n",
+    "    \n",
+    "    #check out of bounds\n",
+    "    if maze[i][j] == 'x' or j < 0 or i < 0:\n",
+    "        return False\n",
+    "    \n",
+    "    if i in failed_points:\n",
+    "        if failed_points[i] == j:\n",
+    "            print()\n",
+    "            print(\"i = \",i)\n",
+    "            print(\"j = \",j)\n",
+    "            print(\"^^point failed already\")\n",
+    "            return False\n",
+    "\n",
+    "    #if reach end then set to true\n",
+    "    end_reached = i == 0 and j == 0\n",
+    "    \n",
+    "    if end_reached or robot_maze_optimized(maze,i-1,j,failed_points,total) or robot_maze_optimized(maze,i,j-1,failed_points,total): \n",
+    "        print(\"i = \",i)\n",
+    "        print(\"j = \",j)\n",
+    "        print()\n",
+    "        return True\n",
+    "    \n",
+    "    failed_points[i] = j\n",
+    "    return False\n",
+    "       \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['S', 'x', 0, 0], [0, 'x', 0, 0], [0, 'x', 0, 0], [0, 0, 0, 0]]\n",
+      "\n",
+      "i =  0\n",
+      "j =  2\n",
+      "^^point failed already\n",
+      "\n",
+      "i =  1\n",
+      "j =  2\n",
+      "^^point failed already\n",
+      "i =  0\n",
+      "j =  0\n",
+      "\n",
+      "i =  1\n",
+      "j =  0\n",
+      "\n",
+      "i =  2\n",
+      "j =  0\n",
+      "\n",
+      "i =  3\n",
+      "j =  0\n",
+      "\n",
+      "i =  3\n",
+      "j =  1\n",
+      "\n",
+      "i =  3\n",
+      "j =  2\n",
+      "\n",
+      "i =  3\n",
+      "j =  3\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 297,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "length = 4\n",
+    "maze = [[0 for x in range(length)] for y in range(length)] \n",
+    "\n",
+    "\n",
+    "maze[0][0] = 'S'\n",
+    "maze[0][1] = 'x'\n",
+    "maze[1][1] = 'x'\n",
+    "maze[2][1] = 'x'\n",
+    "# maze[3][1] = 'x'\n",
+    "\n",
+    "\n",
+    "print(maze)\n",
+    "total = 0\n",
+    "failed_points = {}\n",
+    "robot_maze_optimized(maze,3,3,failed_points,total)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8.3 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
